Creation de la Page Start et Player Setup - Composant d'ajout de Joueur - Composant de Vue d'un Joueur - Configuration des Routes

--- a/src/app/player-setup-page/player-setup-page.component.html
+++ b/src/app/player-setup-page/player-setup-page.component.html
@@ -1,1 +1,18 @@
-<p>player-setup-page works!</p>
+<main
+  class="main"
+>
+  <div class="container">
+    <app-add-user (onSubmit)="handleAddUser($event)"></app-add-user>
+    <ul
+      class="listUsers"
+    >
+      <app-user-item
+        *ngFor="let user of allUsers; let i = index"
+        [user]="user"
+        
+        (onDelete)="handleDeleteUser($event)"
+      ></app-user-item>
+    </ul>
+  </div>
+  <button (click)="start()">Commencer le Jeu</button>
+</main>
