--- a/src/app/start-page/start-page.component.html
+++ b/src/app/start-page/start-page.component.html
@@ -1,1 +1,4 @@
-<p>start-page works!</p>
+<div class="start-page">
+    <span>GAME</span>
+    <button (click)="setupPlayer()">Définir les Joueurs</button>
+</div>
