--- a/src/app/location-list/location-list.component.css
+++ b/src/app/location-list/location-list.component.css
@@ -1,20 +1,65 @@
 *{
     box-sizing: border-box;
 }
+.main {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  border: solid 2px royalblue;
+  
+}
 
+.container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
 
 .listLocation {
-  margin-top: 8px;
   display: flex;
-  width: 70%;
-  height: 1000px;
-  overflow-y: scroll;
+  flex: 1;
+  padding: 5px;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
+  min-height: 100%;
+  list-style: none;
+}
+
+.listContinent {
+  min-height: 20%;
+  display: flex;
+  flex: 1;
+  padding: 5px;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  min-height: 100%;
+  list-style: none;
 }
 
 .location {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #ccc;
+  margin-right: 50px;
+  margin-bottom: 50px;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.continent {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   border: 2px solid #ccc;
@@ -32,7 +77,7 @@
   filter : grayscale(100%);
 }
 
-.location img {
-  width: 200px;
-  height: 200px;
+
+.continent.selected{
+  color : blue;
 }
