--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,3 +1,4 @@
-<p>main-page works!</p>
-<app-player-list></app-player-list>
-<app-location-list></app-location-list>
+<div class="mainPage">
+    <app-player-list class="playerList"></app-player-list>
+    <app-location-list class="locationList"></app-location-list>
+</div>
