--- a/src/app/location-item/location-item.component.css
+++ b/src/app/location-item/location-item.component.css
@@ -8,11 +8,12 @@ img {
   }
   
 .location {
-    margin: 25px;
+  padding: 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
     justify-content: center;
+    cursor: pointer;
 }
   
 .location div {
