--- a/src/app/location-list/location-list.component.css
+++ b/src/app/location-list/location-list.component.css
@@ -2,33 +2,26 @@
     box-sizing: border-box;
 }
 .main {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
-  border: solid 2px royalblue;
-  
+  height: 97vh;
+  width: 100%;
 }
 
 .container {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
   align-items: center;
+  overflow-y: scroll;
 }
 
 .listLocation {
   display: flex;
-  flex: 1;
   padding: 5px;
-  gap: 20px;
+  gap: 10px;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  min-height: 100%;
   list-style: none;
 }
 
@@ -41,31 +34,11 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  min-height: 100%;
   list-style: none;
 }
 
 .location {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   border: 2px solid #ccc;
-  margin-right: 50px;
-  margin-bottom: 50px;
-  padding: 5px;
-  cursor: pointer;
-}
-
-.continent {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid #ccc;
-  margin-right: 50px;
-  margin-bottom: 50px;
-  padding: 5px;
   cursor: pointer;
 }
 
