First try opening modal with Angular Material

--- a/src/app/location-item/location-item.component.html
+++ b/src/app/location-item/location-item.component.html
@@ -1,4 +1,5 @@
-<li class="location">
+<li class="location"
+(dblclick)="openDialog()">
     <img [src]="location.flagUrl" alt="{{ location.countryName }}" />
     <div>{{ location.countryName }}</div>
 </li>
