--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,6 @@
 .player-list .selected .player-item {
   border-color: rgb(0, 255, 47);
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
