--- a/src/app/player-list/player-list.component.html
+++ b/src/app/player-list/player-list.component.html
@@ -4,5 +4,7 @@
     [class.selected]="player === selectedPlayer"
     [player]="player"
     (click)="selectPlayer(player)"
+    (dblclick)="openDialog()"
+
   ></app-player-item>
 </div>
