création d'un nouveau compenent news-item

--- a/src/app/location-item/location-item.component.html
+++ b/src/app/location-item/location-item.component.html
@@ -1,5 +1,4 @@
-<li class="location"
-(dblclick)="openDialog()">
+<li class="location">
     <img [src]="location.flagUrl" alt="{{ location.countryName }}" />
     <div>{{ location.countryName }}</div>
 </li>
