--- a/src/app/news-modal/news-modal.component.html
+++ b/src/app/news-modal/news-modal.component.html
@@ -1,11 +1,7 @@
-<p>news-modal works!</p>
-  <!-- <div class="modal-overlay">
-    <div class="modal-content">
-      <h2>{{ title }}</h2>
-      <p>{{ message }}</p>
-      <button (click)="onClose()">Close</button>
-    </div>
-  </div> -->
-<ul>
-  <li *ngfor = "let news of fakeNews; index as i">news</li>
-</ul>
+<div class="news-item">
+  <app-news-item 
+    *ngFor = "let new of news" 
+    [new] = "new"
+  ></app-news-item>
+</div>
+
