--- a/src/app/location-list/location-list.component.html
+++ b/src/app/location-list/location-list.component.html
@@ -6,7 +6,7 @@
       class="listContinent"
     >
       
-     <app-continent-item 
+     <app-continent-item matBadge="4" matBadgeOverlap="false"
         *ngFor="let continent of continents; let i = index"
         [continent]="continent"
         class="continent"
