--- a/src/app/news-item/news-item.component.html
+++ b/src/app/news-item/news-item.component.html
@@ -1,3 +1,8 @@
 <div class="news-item">
-    <div class="new">{{new.text}}</div>
+    <div class="new">
+        {{new.text}}
+        <!--<div>{{new.point}}</div>-->
+    </div>
+    
+    <button mat-button mat-raised (click)="openDialog()"> Faire une Action</button>
 </div>
