--- a/src/app/news-item/news-item.component.html
+++ b/src/app/news-item/news-item.component.html
@@ -3,6 +3,5 @@
         {{new.text}}
         <!--<div>{{new.point}}</div>-->
     </div>
-    
-    <button mat-button mat-raised (click)="openDialog()"> Faire une Action</button>
+    <button mat-button mat-raised (click)="openDialog()">Traiter</button>
 </div>
