--- a/src/app/news-item/news-item.component.css
+++ b/src/app/news-item/news-item.component.css
@@ -2,11 +2,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 50px;
+    justify-content: space-between;
+    height: 40px;
     width: 99%;
     border: 2px solid #b35353;
     border-radius: 5px;
-    
 }
 
 .new{
