rajout de la génération aléatoire des news simples et du mecanisme du joueur courant

--- a/src/app/publish-modal/publish-modal.component.css
+++ b/src/app/publish-modal/publish-modal.component.css
@@ -8,6 +8,11 @@
     margin-bottom: 10px;
 }
 
+.news{
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
 .actionBtn{
     display: flex;
     justify-content: center;
