--- a/src/app/publish-modal/publish-modal.component.html
+++ b/src/app/publish-modal/publish-modal.component.html
@@ -2,9 +2,14 @@
     <div class="container">
         <div class="text-title">Voulez vous publiez la news en cours de traitement ou juste terminer votre tour?</div>
         <mat-divider></mat-divider>
+        <div class="news">
+            <div> News en cours de traitement </div>
+            <div> Jauge ici </div>
+        </div>
+        <mat-divider></mat-divider>
         <div class="actionBtn">
-            <button mat-raised-button>Publier la news</button>
-            <button mat-raised-button>Terminer le tour</button>
+            <button mat-raised-button (click)="publishHandle()" mat-dialog-close>Publier la news</button>
+            <button mat-raised-button (click)="finishHandle()" mat-dialog-close>Terminer le tour</button>
         </div>
     </div>
 </mat-dialog-content>
