--- a/src/app/news-item/news-item.component.html
+++ b/src/app/news-item/news-item.component.html
@@ -1,7 +1,6 @@
 <div class="news-item">
     <div class="new">
-        {{new.text}}
-        <!--<div>{{new.point}}</div>-->
+        {{new}}
     </div>
     <button mat-button mat-raised (click)="openDialog()">Traiter</button>
 </div>
