--- a/src/app/news-item/news-item.component.html
+++ b/src/app/news-item/news-item.component.html
@@ -2,5 +2,5 @@
     <div class="new">
         {{new}}
     </div>
-    <button mat-button mat-raised (click)="openDialog()">Traiter</button>
+    <button mat-button mat-raised (click)="openDialog(new)">Traiter</button>
 </div>
