--- a/src/app/player-item/player-item.component.html
+++ b/src/app/player-item/player-item.component.html
@@ -3,11 +3,16 @@
     <img src="{{ player.image }}" alt="" />
     <div class="point">
       <span class="username">{{ player.username }}</span>
-      <span class="pointChart">Point : ### {{ player.point }}</span>
+      <span class="pointChart"></span>
     </div>
   </div>
   <div class="credibility">
     <span class="credText">Crédibilité</span>
-    <span class="credChart"> ### {{ player.credibility }}</span>
+    <mat-progress-bar
+      mode="determinate"
+      value="{{ playerInfo.credibility }}"
+      color="primary"
+      class="progressBar"
+    ></mat-progress-bar>
   </div>
 </div>
