--- a/src/app/publish-modal/publish-modal.component.css
+++ b/src/app/publish-modal/publish-modal.component.css
@@ -1,26 +1,35 @@
-.container{
-    display:flex;
-    flex-direction: column;
+.container {
+  display: flex;
+  flex-direction: column;
 }
 
-.text-title{
-    text-align: center;
-    margin-bottom: 10px;
+.text-title {
+  text-align: center;
+  margin-bottom: 10px;
 }
 
-.news{
-    text-align: center;
-    margin-bottom: 10px;
-    margin-top: 10px;
+.news {
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
-.actionBtn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
+.actionBtn {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+  margin-top: 10px;
 }
 
-.actionBtn button{
-    width: 200px;
-    height: 50px;
+.actionBtn button {
+  width: 200px;
+  height: 50px;
+}
+
+mat-progress-bar {
+  height: 15px;
+  border-radius: 10px;
 }
