--- a/src/app/user-info-details/user-info-details.component.css
+++ b/src/app/user-info-details/user-info-details.component.css
@@ -12,3 +12,16 @@
     width: 100%;
     background-color: rgb(97, 129, 129);
 }
+
+.gain{
+    margin-left: 15px;
+    font-size: larger;
+    font-weight: 500;
+    color: rgb(17, 76, 17);
+    padding: 5px;
+}
+
+mat-progress-bar {
+    height: 15px;
+    border-radius: 10px;
+}
