--- a/src/styles.css
+++ b/src/styles.css
@@ -4,5 +4,23 @@
   background-color: rgb(0, 255, 47);
 }
 
+.player-item .mdc-linear-progress__bar-inner{
+  height: 15px;
+  border: 0;
+  background-color: #6200ee;
+}
+
+.news .mdc-linear-progress__bar-inner{
+  height: 15px;
+  border: 0;
+  background-color: #00ee2c;
+}
+
+.enCours .mdc-linear-progress__bar-inner{
+  height: 15px;
+  border: 0;
+  background-color: #00ee2c;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
