--- a/src/app/player-item/player-item.component.html
+++ b/src/app/player-item/player-item.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="credibility">
-    <span class="credText">Crédibilité</span>
+    <span class="credText">Crédibilité : {{ playerInfo.credibility }}</span>
     <mat-progress-bar
       mode="determinate"
       value="{{ playerInfo.credibility }}"
