--- a/src/app/location-item/location-item.component.html
+++ b/src/app/location-item/location-item.component.html
@@ -1,4 +1,4 @@
-<li class="location">
+<li class="location" matBadge={{globals.simpleFakeNews[location.countryName].length}} matBadgeOverlap="true" matBadgeSize="medium">
     <img [src]="location.flagUrl" alt="{{ location.countryName }}" />
     <div>{{ location.countryName }}</div>
 </li>
