--- a/src/app/publish-modal/publish-modal.component.html
+++ b/src/app/publish-modal/publish-modal.component.html
@@ -6,7 +6,7 @@
     </div>
     <mat-divider></mat-divider>
     <div class="news">
-      <div>News en cours de traitement</div>
+      <div class="title">News en cours de traitement</div>
       <div *ngFor="let new of news">
         <div>{{ new.new }}</div>
         <mat-progress-bar
