--- a/src/app/news-modal/news-modal.component.html
+++ b/src/app/news-modal/news-modal.component.html
@@ -1,4 +1,5 @@
-<h1  mat-dialog-title>News Modal</h1>
+<h1  mat-dialog-title>Les news présents dans le pays</h1>
+<mat-divider></mat-divider>
 <mat-dialog-content>
   <app-news-item 
     *ngFor = "let new of complexNews" 
@@ -10,7 +11,7 @@
   ></app-news-item>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button [mat-dialog-close]="true">Fermer</button>
+  <button mat-raised-button [mat-dialog-close]="true">Fermer</button>
 </mat-dialog-actions>
 
 
