--- a/src/app/publish-modal/publish-modal.component.css
+++ b/src/app/publish-modal/publish-modal.component.css
@@ -32,4 +32,10 @@
 mat-progress-bar {
   height: 15px;
   border-radius: 10px;
+  margin-top: 5px;
+}
+
+.news .title{
+    font-weight: bolder;
+    font-size: 20px;
 }
