--- a/src/app/user-info-details/user-info-details.component.css
+++ b/src/app/user-info-details/user-info-details.component.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 .user{
     display: flex;
     flex-direction: column;
@@ -8,9 +12,37 @@
 }
 
 .new{
-    height: 40px;
-    width: 100%;
-    background-color: rgb(97, 129, 129);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 15px;
+    width: 95%;
+    border: 2px solid #1e5509;
+    border-radius: 5px;
+    margin: 5px auto;
+}
+
+.enCours{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 15px;
+    width: 95%;
+    border: 2px solid #1e5509;
+    border-radius: 5px;
+    margin: 5px auto;
+}
+
+.newNew{
+    width: 40%;
+    min-width: 300px;
+}
+
+mat-progress-bar{
+    width: 175px;
+    margin: 0px 20px;
 }
 
 .gain{
@@ -19,9 +51,25 @@
     font-weight: 500;
     color: rgb(17, 76, 17);
     padding: 5px;
+    cursor: help;
 }
 
 mat-progress-bar {
     height: 15px;
     border-radius: 10px;
+}
+
+.user .title{
+    text-align: center;
+    margin-top: 15px;
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+.actions{
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
 }
