--- a/src/app/news-item/news-item.component.html
+++ b/src/app/news-item/news-item.component.html
@@ -2,5 +2,5 @@
     <div class="new">
         {{new}}
     </div>
-    <button mat-raised-button (click)="openDialog(new)">Traiter</button>
+    <button mat-raised-button (click)="openDialog(new)" mat-dialog-close>Traiter</button>
 </div>
