--- a/src/app/news-modal/news-modal.component.html
+++ b/src/app/news-modal/news-modal.component.html
@@ -1,4 +1,4 @@
-<h1  mat-dialog-title>Les news présents dans le pays</h1>
+<h1  mat-dialog-title>Les news présents</h1>
 <mat-divider></mat-divider>
 <mat-dialog-content>
   <app-news-item 
