--- a/src/app/start-page/start-page.component.html
+++ b/src/app/start-page/start-page.component.html
@@ -1,4 +1,4 @@
 <div class="start-page">
-    <span>GAME</span>
+    <span>Fact Or Fake</span>
     <button (click)="setupPlayer()">Définir les Joueurs</button>
 </div>
