--- a/src/app/start-page/start-page.component.css
+++ b/src/app/start-page/start-page.component.css
@@ -8,6 +8,11 @@
   gap: 20px;
 }
 
+.start-page span{
+  font-size: xx-large;
+  font-family: 'Press Start 2P', cursive;
+}
+
 button {
   cursor: pointer;
   border-radius: 4px;
