--- a/src/app/user-info-details/user-info-details.component.html
+++ b/src/app/user-info-details/user-info-details.component.html
@@ -19,7 +19,7 @@
           Publier la news
         </button>
         <button mat-raised-button (click)="terminer(news)" mat-dialog-close>
-          Terminer la news
+          Invalider la news
         </button>
       </div>
     </div>
