--- a/src/app/action-modal/action-modal.component.css
+++ b/src/app/action-modal/action-modal.component.css
@@ -2,6 +2,7 @@ mat-dialog-content {
   height: 78%;
   width: 100%;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .actions {
@@ -11,10 +12,10 @@ mat-dialog-content {
   align-items: center;
   padding: 5px 10px;
   height: 40px;
-  width: 99%;
+  width: 98%;
   border: 2px solid #b35353;
   border-radius: 5px;
-  margin: 5px 0px;
+  margin: 5px auto;
 }
 
 .action {
