--- a/src/app/continent-item/continent-item.component.html
+++ b/src/app/continent-item/continent-item.component.html
@@ -1,3 +1,3 @@
-<li class="continent">
+<li class="continent" matBadge={{numberOfAvailableCountries}} matBadgeOverlap="true" matBadgeSize="medium">
     <div>{{ continent.continentName }}</div>
 </li>
