--- a/src/app/player-list/player-list.component.html
+++ b/src/app/player-list/player-list.component.html
@@ -3,6 +3,6 @@
     *ngFor="let player of players"
     [class.selected]="player.username === selectedPlayer.username"
     [player]="player"
-    (dblclick)="openDialog()"
+    (click)="openDialog()"
   ></app-player-item>
 </div>
